# hackathon-2021-spring

./: .editorconfig  .gitignore  .gitmodules  README.md  docker-compose.yml  package-lock.json  package.json
teams/01-Web3Games/src/SubGat-Game-Contract-Library/example/subgame2/: Cargo.toml  lib.rs
teams/01-Web3Games/src/SubGat-Game-Web-Back-end-Server-Frame/: .gitignore  .travis.yml  Cargo.toml  README.md  create_registers.sql  test-dogedoge.txt
teams/01-Web3Games/src/SubGat-Game-Web-Back-end-Server-Frame/scripts/: remove_daily_reward.php
teams/01-Web3Games/src/SubGat-Game-Web-Back-end-Server-Frame/src/: filters.rs  handlers.rs  main.rs  tests.rs
teams/01-Web3Games/src/SubGat-Game-Web-Back-end-Server-Frame/src/db/: mod.rs
teams/04-NFTMart/src/substrate/pallets/nftmart-nft/: Cargo.toml
teams/04-NFTMart/src/substrate/pallets/nftmart-nft/rpc/: Cargo.toml
teams/04-NFTMart/src/substrate/pallets/nftmart-nft/src/: lib.rs  mock.rs  tests.rs
teams/04-NFTMart/src/substrate/pallets/orml-nft/: Cargo.toml
teams/04-NFTMart/src/substrate/pallets/orml-nft/src/: lib.rs
teams/04-NFTMart/src/substrate/pallets/orml-tokens/: Cargo.toml
teams/04-NFTMart/src/substrate/pallets/orml-tokens/src/: lib.rs
teams/04-NFTMart/src/substrate/pallets/orml-utilities/: Cargo.toml
teams/05-Blocktree/src/shopbring/: Cargo.toml  LICENSE  Makefile  README.md
teams/05-Blocktree/src/shopbring/doc/: ext_type.json
teams/05-Blocktree/src/shopbring/node/: Cargo.toml
teams/05-Blocktree/src/shopbring/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
teams/05-Blocktree/src/shopbring/pallets/commissioned-shopping/: Cargo.toml
teams/05-Blocktree/src/shopbring/pallets/commissioned-shopping/src/: lib.rs  mock.rs  tests.rs
teams/05-Blocktree/src/shopbring/pallets/generic-asset/: Cargo.toml
teams/05-Blocktree/src/shopbring/pallets/generic-asset/rpc/: Cargo.toml
teams/05-Blocktree/src/shopbring/pallets/generic-asset/src/: benchmarking.rs  default_weight.rs  imbalances.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs
teams/05-Blocktree/src/shopbring/pallets/invitation/: Cargo.toml
teams/05-Blocktree/src/shopbring/pallets/invitation/src/: lib.rs  mock.rs  tests.rs
teams/05-Blocktree/src/shopbring/pallets/support/: Cargo.toml
teams/05-Blocktree/src/shopbring/pallets/support/src/: lib.rs
teams/05-Blocktree/src/shopbring/pallets/template/: Cargo.toml
teams/05-Blocktree/src/shopbring/primitives/: Cargo.toml
teams/05-Blocktree/src/shopbring/primitives/src/: lib.rs
teams/05-Blocktree/src/shopbring/runtime/: Cargo.toml
teams/05-Blocktree/src/shopbring/runtime/src/: constants.rs  lib.rs
teams/06-Uniarts/src/substrate/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  run.sh
teams/06-Uniarts/src/substrate/contracts/: BridgeSender.sol
teams/06-Uniarts/src/substrate/pallets/assets/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/assets/src/: lib.rs
teams/06-Uniarts/src/substrate/pallets/bridge/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/bridge/src/: lib.rs  types.rs
teams/06-Uniarts/src/substrate/pallets/certificate/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/certificate/src/: lib.rs
teams/06-Uniarts/src/substrate/pallets/common/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/common/src/: currency.rs  impls.rs  lib.rs
teams/06-Uniarts/src/substrate/pallets/lotteries/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/lotteries/src/: lib.rs
teams/06-Uniarts/src/substrate/pallets/names/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/names/src/: lib.rs  tests.rs
teams/06-Uniarts/src/substrate/pallets/nft/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/rewards/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/stake/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/staking/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/token/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/trade/: Cargo.toml
teams/06-Uniarts/src/substrate/pallets/validator-set/: Cargo.toml
teams/06-Uniarts/src/substrate/primitives/: Cargo.toml
teams/06-Uniarts/src/substrate/primitives/src/: lib.rs
teams/06-Uniarts/src/substrate/runtime/fuxi/: Cargo.toml  types.json
teams/06-Uniarts/src/substrate/runtime/pangu/: Cargo.toml  types.json
teams/10-Magical-Cultivators/src/substrate/node/: Cargo.toml
teams/10-Magical-Cultivators/src/substrate/node/src/: command.rs  main.rs  rpc.rs  service.rs
teams/12-seee/: Cargo.toml  README.md
teams/12-seee/docs/: project.md  prospect.md  script.md  seee-video-url.md  team.md
teams/12-seee/src/: main.rs  schema-cargo.sql  schema-hash.sql
teams/12-seee/src/cargo/: curl-command.jsonc  model.rs  routes.rs
teams/12-seee/src/substrate/pallets/template/: Cargo.toml
teams/13-二次方工场/src/pallets/quadratic-funding/: Cargo.toml
teams/13-二次方工场/src/pallets/quadratic-funding/src/: mock.rs  tests.rs
teams/18-微芒区块链小队/src/substrate/node/: Cargo.toml
teams/18-微芒区块链小队/src/substrate/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  network_config.rs  network_config_cmd.rs  network_describe_config.rs  rpc.rs  service.rs
teams/18-微芒区块链小队/src/substrate/runtime/: Cargo.toml
teams/18-微芒区块链小队/src/substrate/runtime/src/: lib.rs
teams/21-mybank-network/src/pallets/asset_pool/: Cargo.toml
teams/21-mybank-network/src/pallets/asset_pool/src/: lib.rs
teams/21-mybank-network/src/pallets/lending/: Cargo.toml
teams/21-mybank-network/src/pallets/lending/src/: lib.rs
teams/21-mybank-network/src/pallets/liquidation/: Cargo.toml
teams/21-mybank-network/src/pallets/liquidation/src/: lib.rs
teams/26-InkBridge/src/btc-relay/: .gitignore  Cargo.toml  README.md  build.rs  config.json  start.sh
teams/26-InkBridge/src/btc-relay/.github/workflows/: build.yml
teams/26-InkBridge/src/btc-relay/abi/: application.json  bridge.json
teams/26-InkBridge/src/btc-relay/src/: bitcoin.rs  cmd.rs  error.rs  lib.rs  logger.rs  relayer.rs  service.rs  utils.rs
teams/26-InkBridge/src/btc-relay/src/contract/: mod.rs
teams/26-InkBridge/src/btc-relay/src/types/: compact.rs  mod.rs
(+2897 files in other folders)
