[package]
name = "actix"
version = "0.1.0"
authors = ["max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
listenfd = "0.3.0"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = [ 'postgres','runtime-async-std-native-tls','uuid','chrono', 'macros', 'json', 'time' ] }
# async-std = { version = "1.0", features = [ "attributes" ] }
dotenv = "0.15.0"
env_logger = "0"
log = "0"
anyhow = "1.0"
futures = "0.3.0"
chrono = "0"
merkle-cbt = "0"
sha2 = "0"
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
tracing = "^0.1.25" 
parity-scale-codec = "2"







