[package]
name = "dogedoge"
version = "0.1.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
warp = "0.3.0"

#log support
pretty_env_logger = "*"
log = "0.4"
fast_log="1.3"

#json support
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

#datatime support
chrono = {version = "0.4", features = ["serde"]}

#rbatis support
rbatis = { version = "1.8" }

lazy_static = "1.4.0"
uuid = "0.8"