[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/template',
    'pallets/commissioned-shopping',
    'pallets/invitation',
    'pallets/generic-asset',
    'pallets/generic-asset/rpc',
    'pallets/generic-asset/rpc/runtime-api',
    'pallets/support',
    'runtime',
    'primitives',
]
