[package]
name = "uniarts-primitives"
version = "2.0.1"
authors = ["terry.tu <tuminfei1981@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-consensus-aura = { version = "0.8.0", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-std/std",
]