[package]
name = "highway-runtime"
version = "0.1.0"
authors = ["Highway"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

pallet-aura = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-aura", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-balances", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "frame-support", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-grandpa", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-randomness-collective-flip", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-sudo", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "frame-system", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-timestamp", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-transaction-payment", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "frame-executive", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-api", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-block-builder", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-consensus-aura", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-core", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-inherents", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-offchain", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-runtime", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-session", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-std", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-transaction-pool", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "sp-version", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "frame-system-rpc-runtime-api", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-transaction-payment-rpc-runtime-api", default-features = false }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-contracts-rpc-runtime-api", default-features = false }

# node authorization
pallet-node-authorization = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-node-authorization", default-features = false }

pallet_utility = { git = "https://github.com/paritytech/substrate", rev = "8643b9d5179cbef1002a2943922a68e1e6137c60", package = "pallet-utility", default-features = false }

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "serde",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-node-authorization/std",
]
