[package]
name = "nftmart-nft"
version = "3.0.0"
authors = ["NFTMart Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
enumflags2 = { version = "0.6.3" }
sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "3.0.0", default-features = false, path = "../../frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../frame/system" }
pallet-proxy = { version = "3.0.0", default-features = false, path = "../../frame/proxy" }
pallet-timestamp = { version = "3.0.0", default-features = false, path = "../../frame/timestamp" }
orml-traits = { version = "0.4.1-dev", default-features = false, path = "../orml-traits" }
orml-nft = { version = "0.4.1-dev", default-features = false, path = "../orml-nft" }

[dev-dependencies]
sp-io = { version = "3.0.0", path = "../../primitives/io" }
pallet-balances = { version = "3.0.0", path = "../../frame/balances" }
pallet-utility = { version = "3.0.0", path = "../../frame/utility" }
orml-currencies = { version = "0.4.1-dev", path = "../orml-currencies" }
orml-tokens = { version = "0.4.1-dev", path = "../orml-tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"orml-traits/std",
	"orml-nft/std",
	"pallet-timestamp/std",
	"enumflags2/serde"
]
