[package]
name = "pallet-bridge"
version = "2.0.1"
authors = ["terry.tu <tuminfei1981@gmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false}
sp-core = { version = "2.0.1", default-features = false }
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }
log = "0.4.8"
sha3 = { version = "0.8", default-features = false }

pallet-balances = { version = "2.0.1", default-features = false}
pallet-timestamp = { version = "2.0.1", default-features = false}

uniarts-primitives = { version = "2.0.1", default-features = false, path = "../../primitives" }

[dev-dependencies]
sp-core = { version = "2.0.0"}

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'sha3/std',
    'sp-io/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'uniarts-primitives/std',
]
