[package]
name = "pallet-certificate"
version = "0.1.0"
authors = ["yxf <yxf4559@163.com>"]
edition = "2018"


[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
